# create-fastapi-app

./: alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 15e10f60a762_initial_commit.py
app/: main.py
app/api/: __init__.py  deps.py  health.py
app/config/: config.py
app/db/: async_session.py  redis_client.py  session.py
app/models/: __init__.py  sample.py
