[project]
name = "create-fastapi-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "psycopg2[binary]>=2.9.10",
    "pydantic>=2.11.1",
    "python-dotenv>=1.1.0",
    "redis>=5.2.1",
    "uvicorn>=0.34.0",
]
